# 66664

./: .gitignore  BUILD.md  CMakeLists.txt  Cargo.toml  STATUS.md
arch/arm/: CMakeLists.txt  README.md
arch/arm64/: CMakeLists.txt  README.md
arch/x64/: CMakeLists.txt  README.md
arch/x86/: CMakeLists.txt  README.md
bindings/cpp/: CMakeLists.txt  README.md
runtime/env_detectors/: CMakeLists.txt  README.md
runtime/env_integrity/: CMakeLists.txt
runtime/jit/: CMakeLists.txt  README.md
runtime/obfuscation/: CMakeLists.txt
runtime/self_mod/: CMakeLists.txt
runtime/stack_probe/: CMakeLists.txt  README.md
runtime/state/: CMakeLists.txt  README.md
runtime/trusted_oracle/: CMakeLists.txt  README.md
runtime/vm1/: CMakeLists.txt  README.md
runtime/vm2/: CMakeLists.txt  README.md
tests/: CMakeLists.txt  README.md
tests/arch/: arm64_decoder_corpus.cpp  arm_decoder_corpus.cpp  decoder_test_common.h  lift_basic_hash_regression.cpp  pc_relative_arm.cpp  pc_relative_arm64.cpp  pc_relative_x64.cpp  pc_relative_x86.cpp  rewriter_lift_integration_elf.py  rewriter_lift_integration_elf_with_loop.py  x64_decoder_corpus.cpp  x86_decoder_corpus.cpp
tests/audit/: assert_detector_selftest.py  audit_cpp_format.cpp  audit_cpp_test.cpp  compare_cpp_rust_audit.py  golden_line.txt  golden_record.json
tests/backends_rewriter/: rewriter_pe_security_fix.py
tests/bindings_cpp/: assert_exists.py  compare_policy_json.py  expected_c.json  expected_cpp_fallback.json  expected_cpp_plugin.json  sample_c.c  sample_cpp.cpp
tests/bindings_rust/: base_policy.json  compare_parity.py  compare_policy_json.py  expected.json
tests/final_matrix/: annotation_parity.py  audit_events.py  common.py  final_matrix_audit_helper.cpp  final_matrix_perf_helper.cpp  functional_consistency.py  jit_hotspot.py  platform_matrix.py  print_summary.py
tests/integration_targets/: run_integration_ci.py
tests/live_tool_campaign/: run_windows_ci_live.py
tests/loader/: assert_audit_log.py  assert_log_absent.py  assert_nm_symbol.py  loader_android_jni_onload_link_probe.cpp  loader_capability_gate_disallow.cpp  loader_linux_init_order.cpp  pe_tls_callback_check.py
tests/policy/: compare_cpp_rust.py  policy_cpp_summary.cpp  policy_cpp_test.cpp
tests/runtime_crypto_revision/: CMakeLists.txt
tests/runtime_dispatcher_hardening/: CMakeLists.txt  dispatcher_batch_hmac_epoch_cache.cpp
tests/runtime_env_detectors/: CMakeLists.txt  env_detectors_frida_divergence.cpp  env_detectors_hardware_breakpoint_cross_check.cpp  test_common.h  windows_debugger_detector_fixture.cpp
tests/runtime_env_integrity/: CMakeLists.txt
tests/runtime_integrity/: crc32_ieee_vectors.cpp  crc32_stream_equals_oneshot.cpp  integrity_probe_cli.py  periodic_sweeper_detects_tamper.cpp  region_crc32_captured_on_register.cpp  region_escalation_both_mismatch.cpp  region_escalation_fast_mismatch_authoritative_ok.cpp  region_verify_fast_mismatch.cpp  region_verify_fast_ok.cpp  test_common.h  vm1_module_crc_mismatch.cpp  vm2_module_crc_mismatch.cpp
tests/runtime_obfuscation/: CMakeLists.txt  handler_objdump_growth.py  mba_equivalence.cpp  opaque_predicates.cpp  test_common.h  vm1_equivalence.cpp  vm2_equivalence.cpp
tests/runtime_pe_lifting/: rewriter_pe_lifting.py
tests/runtime_polymorphic_handlers/: CMakeLists.txt  polymorphic_handler_dump.cpp  polymorphic_handler_seed_divergence.py  polymorphic_vm1_layout.cpp  polymorphic_vm2_layout.cpp  test_common.h
tests/runtime_reverse_layout/: CMakeLists.txt
tests/runtime_rolling_opcode/: CMakeLists.txt  rolling_opcode_lazy_page_materialization.cpp
tests/runtime_self_mod/: CMakeLists.txt  self_mod_vm1_hmac_divergence.cpp  self_mod_vm1_runtime_fetch_mismatch.cpp  self_mod_vm2_interlock_checksum_mismatch.cpp  test_common.h
tests/runtime_stack_probe/: CMakeLists.txt  stack_probe_selector_low16_and_maps_cache.cpp
tests/runtime_state/: audit_decision_logged.cpp  fusion_does_not_change_policy.cpp  hot_recorder_concurrency_8_threads.cpp  profile_round_trip.cpp  profile_validator_rejects_oob.cpp  scheduler_caches_resize_within_bounds.cpp  scheduler_chooses_jit_when_hot.cpp  scheduler_evicts_cold.cpp  test_common.h  vmp_profile_tool_merge_diff_validate.py
tests/runtime_timing_traps/: CMakeLists.txt  test_common.h  timing_trap_profile_roundtrip.cpp  timing_trap_vm1_baseline_ok.cpp  timing_trap_vm1_delay_siren.cpp  timing_trap_vm2_fast_siren.cpp
tests/runtime_trampoline/: CMakeLists.txt
tests/runtime_trusted_oracle/: CMakeLists.txt  trusted_oracle_ablation_matrix.cpp  trusted_oracle_single_source_ablation.cpp
tests/runtime_vm1/: test_common.h  vm1_arith_ops.cpp  vm1_asm_round_trip.cpp  vm1_breakpoint_event.cpp  vm1_call_ret.cpp  vm1_control_flow.cpp  vm1_cross_domain_call.cpp  vm1_exceptions.cpp
tests/runtime_vm1_jit/: jit_backend_switch.cpp  jit_cache_size_bound.cpp  jit_correctness_add_loop.cpp  jit_correctness_fib_recursive.cpp  jit_disabled.cpp  jit_domain_call_no_inlining.cpp  jit_invalidate_key_rotation.cpp  jit_no_degrade_to_native.cpp  jit_string_barrier.cpp  test_common.h
tests/runtime_vm2/: isa_isolation.cpp  test_common.h  vm2_arith_ops.cpp  vm2_asm_round_trip.cpp  vm2_breakpoint_event.cpp  vm2_calling_convention.cpp  vm2_control_flow.cpp  vm2_cross_domain.cpp  vm2_exceptions.cpp  vm2_string_integration.cpp
tests/runtime_vm2_jit/: test_common.h  vm2_jit_backend_parity.cpp  vm2_jit_correctness_fib20.cpp  vm2_jit_disabled.cpp  vm2_jit_function_level_only.cpp  vm2_jit_integrity_failure_evicts.cpp  vm2_jit_invalidate_integrity.cpp  vm2_jit_invalidate_key_rotation.cpp  vm2_jit_no_degrade_to_native.cpp  vm2_jit_predicate_preserved.cpp  vm2_jit_tsload_no_speculation.cpp
tests/strings/: concurrency_8_threads.cpp  crypto_vectors.cpp  pool_corruption_detected.cpp  test_common.h  transient_view_zeroization.cpp  vmp_protect_strings.py  vmp_string_protect_roundtrip.py
tools/: CMakeLists.txt  README.md
tools/src/: string_protect_common.h  vmp_clang.cpp  vmp_clangxx.cpp  vmp_driver_common.h  vmp_integrity_probe.cpp  vmp_link.cpp  vmp_loader_selftest.cpp  vmp_profile_tool.cpp  (+6 more)
(+169 files in other folders)
